# OASIS

./: .gitignore  config.py  pyproject.toml  train.py
dataloaders/: dataloaders.py
models/: generator.py
scripts/: train.py  train_angio.py  train_angio.sh
src/oasis/: config.py  test.py  train.py
src/oasis/dataloaders/: AngioDataset.py  dataloaders.py
src/oasis/models/: discriminator.py  generator.py  models.py
src/oasis/utils/: fid_scores.py  utils.py
