[project]
name = "oasis"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "torchvision",
    "torch",
    "matplotlib",
    "scipy",
    "numpy",
    "tqdm>=4.67.1"
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/oasis"]